--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <input type="email" placeholder="Email" name="email" class="box">
             <input type="number" placeholder="Number" name="number" class="box">
             <textarea placeholder="Message" name="message" class="box" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
+            <input type="submit" value="send message" class="btn" id="send_message">
         </form>
     </section>
 
